<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical" >

   	<TextView
       android:id="@+id/title"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/app_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   	<TextView
       android:id="@+id/space"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text=""
       android:textAppearance="?android:attr/textAppearanceLarge" />
   	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
    	<TextView
            android:id="@+id/userIdLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_id"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/userIdText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="text" >

            <requestFocus />
        </EditText>    
    </LinearLayout>

    <Button
        android:id="@+id/userDataSubmitButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_config" />

    <Button
        android:id="@+id/userDataBackButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />
    
</LinearLayout>
