<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical" >


	<TextView
       android:id="@+id/title"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/app_title"
       android:textAppearance="?android:attr/textAppearanceLarge" />

   	<TextView
       android:id="@+id/space"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text=""
       android:textAppearance="?android:attr/textAppearanceMedium" />

   	<TextView
       android:id="@+id/spaceConnectionConf"
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
       android:text="@string/connection_conf_title"
       android:textAppearance="?android:attr/textAppearanceMedium" />
   		        
    <Spinner
        android:id="@+id/connectionShemeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
   	
   	<LinearLayout android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="vertical" 
    	android:id="@+id/contentLayout">
    
	</LinearLayout>

    <Button
        android:id="@+id/connectionConfGoBackButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_back" />
   	
</LinearLayout>
